even more minimal

--- a/package.json
+++ b/package.json
@@ -2,13 +2,12 @@
   "name": "minimal-example",
   "version": "0.0.0-versionless",
   "scripts": {
-    "build": "yarn babel test.ts"
+    "build": "yarn babel test.js"
   },
   "dependencies": {
     "@babel/cli": "^7.17.6",
     "@babel/core": "^7.17.8",
-    "@babel/preset-env": "^7.16.11",
-    "@babel/preset-typescript": "^7.16.7",
+    "@babel/plugin-transform-modules-commonjs": "^7.17.7",
     "babel-plugin-relay": "^13.2.0",
     "react-relay": "^13.2.0",
     "relay-compiler": "^13.2.0"
